--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Collaborative drawing board where users can share ideas and chat",
   "dependencies": {
     "express": "~4.10.2",
-    "socket.io": "~1.4.5"
+    "socket.io": "~1.4.5",
+    "canvas": "1.6.2"
   }
 }
